- Bugfix - Set default role for new users (#33)
- Bugfix - Search filter case insensitive (#35)
- Feature - AdultInfo prop added to ReportDto class (#15)
- Feature - Report refactoring (migration added)(#37)
- Feature - Social SDK update (#38)
- Feature - Organization hierarchy (migration added)(#30)
- Feature - CsiServices class library added (migration added for Person.LegacyId)(#39)

Ver. 1.7.3 - 2021-07-01
---------------------------
- Feature - Subsidence Hazard Type added

Ver. 1.7.2 - 2021-06-18
---------------------------
- Feature - Target translations added (migration added)(#31)

Ver. 1.7.1 - 2021-06-14
---------------------------
- Feature - Edited Unique Key of category_translations (migration added)
- Feature - GroupKey prop added to CategoryGroupDto

Ver. 1.7.0 - 2021-06-10
---------------------------
- Feature - Add filter on receiver list in case of new Communication (#29)
- Feature - DashboardAppService added (#4)
- Feature - Categories refactoring (2 migrations added)(#28)


Ver. 1.6.0 - 2021-05-31
---------------------------
- Feature - GetCategories API made public
- Feature - ImportUsers API implementation (#26)

Ver. 1.5.5 - 2021-05-20
---------------------------
- Feature - IsFirstLogin field added to Person, update of ImportApiService, Permission initializations (migration added) (#25)
- Feature - ClientIpAddress property removed (migration added) (#24)
- Feature - RabbitMQ client added and Connection management (appsettings Bus section edited)(#2)

Ver. 1.5.4 - 2021-04-09
---------------------------
- Feature - Status 'Ready' added, update of Social Media Module SDK: NL added, id_str for tweet (#18)

Ver. 1.5.3. - 2021-04-01
---------------------------
- Feature - Update preferred languages API added and UpdateProfile API updated (#20)
- Feature - Added Hazard property to Activity (migration added) (#19)

Ver. 1.5.2 - 2021-03-26
---------------------------