@@ -28,5 +28,6 @@ namespace Ermes.Reports.Dto
         public int MaxValue { get; set; }
         public string[] Values { get; set; }
         public string GroupIcon { get; set; }
+        public FieldType FieldType { get; set; }
     }
 }
