@@ -7,6 +7,7 @@ Ver.
 - Feature - Social SDK update (#38)
 - Feature - Organization hierarchy (migration added)(#30)
 - Feature - CsiServices class library added (migration added for Person.LegacyId)(#39)
+- Feature - FieldType added to Category (migration added)(#40)
 
 Ver. 1.7.3 - 2021-07-01
 ---------------------------
